<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kinetichub.tamamall.ui.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <RadioGroup
                    android:id="@+id/radioGroup_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/edittext_conor_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rdb_eng"
                        style="@style/LanguageRadioStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/eng" />

                    <RadioButton
                        android:id="@+id/rdb_myan"
                        style="@style/LanguageRadioStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:text="@string/myanmar" />


                </RadioGroup>

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/margin_xxxxxlarge"
                    android:layout_height="@dimen/margin_xxxxxlarge"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:background="@drawable/kinetichub_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_signIn_title"
                    style="@style/Text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/welcome_to_tamamall"
                    app:layout_constraintEnd_toEndOf="@+id/iv_logo"
                    app:layout_constraintStart_toStartOf="@+id/iv_logo"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_phone_no"
                    style="@style/InputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:hint="@string/phone_no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signIn_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_password"
                    style="@style/InputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_phone_no">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorGreen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_password" />

                <Button
                    android:id="@+id/btn_signIn"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_medium"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/signin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/Text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginBottom="@dimen/margin_xlarge"
                    android:text="@string/sign_up_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>